<resources>
  <string name="app_name">Magellan Flow Sample</string>
  <string name="intro_view_text">This is the start of your journey!</string>
  <string name="new_flow_text">Start next flow</string>
  <string name="exit_flow">Exit</string>
  <string name="learn_more">Learn more</string>
  <string name="detail_memo_text">This is detailed memo of your journey!!</string>
  <string name="learn_more_text">Here you will learn more about the expedition!</string>
  <string name="icon">icon</string>
  <string name="first_screen">Go back to first</string>
</resources>
