<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="Overdraw"
    android:id="@+id/introStepRoot"
    >

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/largePadding"
      android:src="@mipmap/magellan_icon"
      android:contentDescription="@string/icon"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:text="@string/intro_view_text"
      android:textColor="@android:color/white"
      android:textSize="20sp"
      />

  <Button
      android:id="@+id/learnMore"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/largePadding"
      android:text="@string/learn_more"
      />

</LinearLayout>