<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normalSpacing"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normalSpacing"
        android:text="Next, choose a style"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        />

    <RadioGroup
        android:id="@+id/styleSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/largeSpacing"
        >

      <RadioButton
          android:id="@+id/plain"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Plain"
          />

      <RadioButton
          android:id="@+id/frosted"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Frosted"
          />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normalSpacing"
        android:text="What color should it be?"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        />

    <RadioGroup
        android:id="@+id/colorSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <RadioButton
          android:id="@+id/natural"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Natural"
          />

      <RadioButton
          android:id="@+id/rainbow"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Rainbow"
          />

    </RadioGroup>

  </LinearLayout>

  <Button
      android:id="@+id/next"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:enabled="false"
      android:text="Next"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      />
</androidx.constraintlayout.widget.ConstraintLayout>